<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="button_library_name">Медиатека</string>
    <string name="button_settings_name">Настройки</string>
    <string name="settings_dark_mode">Темная тема</string>
    <string name="settings_share_app">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>
    <string name="share_app_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="share_app_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="share_app_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_app_email">S4cr1fic3@yandex.ru</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="search_text">Поиск</string>
    <string name="media_lib_text">Медиатека</string>
    <string name="setting_text">Настройки</string>
    <string name="playlist_maker_name">Playlist Maker</string>
    <string name="dark_theme_text">Темная тема</string>
    <string name="share_app_text">Поделиться приложением</string>
    <string name="call_tech_support_text">Написать в поддержку</string>
    <string name="user_agreement_text">Пользовательское соглашение</string>
    <string name="Back_button">Назад</string>
    <string name="Nirvana_album_cover_img">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
    <string name="MichaelJackson_album_cover_img">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
    <string name="BeeGees_album_cover_img">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
    <string name="LedZeppelin_album_cover_img">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
    <string name="GunsNroses_album_cover_img">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
    <string name="itunes_api_url">https://itunes.apple.com</string>
    <string name="nothing_found_string">Ничего не нашлось</string>
    <string name="refresh_button_string">Обновить</string>
    <string name="no_internet_search_failure">Проблемы со связью\n\Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history_btn">Очистить историю</string>
    <string name="search_history_hint">Вы искали</string>
    <string name="media_lib_track_name">media_lib_track_name</string>
    <string name="media_lib_artist_name">media_lib_artist_name</string>
    <string name="media_lib_track_duration">media_lib_track_duration</string>
    <string name="media_lib_track_album">media_lib_track_album</string>
    <string name="media_lib_track_year">media_lib_track_year</string>
    <string name="media_lib_track_genre">media_lib_track_genre</string>
    <string name="media_lib_track_country">media_lib_track_country</string>
    <string name="track_time_data">5:35</string>
    <string name="track_name_data">Yesterday (Remastered 2009)</string>
    <string name="track_year_data">1965</string>
    <string name="track_genre_data">Жанр</string>
    <string name="track_country_data">Великобритания</string>
    <string name="track_country">Страна</string>
    <string name="track_genre">Жанр</string>
    <string name="track_year">Год</string>
    <string name="track_album">Альбом</string>
    <string name="track_duration">Длительность</string>
    <string name="player_timer">0:30</string>
    <string name="rock">Rock</string>
    <string name="yesterday_remastered_2009">Yesterday (Remastered 2009)</string>
    <string name="the_beatles">The Beatles</string>
    <string name="timer_update_to_zero">00:00</string>
    <string name="library_new_playlist">Новый плейлист</string>
    <string name="library_playlists_empty">Вы не создали ни одного плейлиста</string>
    <string name="library_favorites_empty">Ваша медиатека пуста</string>
    <string name="library_favorites">Избранные треки</string>
    <string name="library_playlists">Плейлисты</string>
    <string name="no_internet_connection">Проверьте подключение к интернету</string>

    <string name="newPlaylist_question_title">Завершить создание плейлиста?</string>
    <string name="newPlaylist_question_message">Все несохраненные данные будут потеряны</string>
    <string name="newPlaylist_question_cancel_button">Отмена</string>
    <string name="newPlaylist_question_save_button">Завершить</string>
    <string name="newPlaylist_playlist_covers_folder">playlists_covers</string>
    <string name="newPlaylist_create_button">Создать</string>
    <string name="newPlaylist_name_hint">Название*</string>
    <string name="newPlaylist_description_hint">Описание</string>
    <string name="bottom_sheet_title">Добавить в плейлист</string>

    <string name="playlist_insert_track_message">Добавлено в плейлист </string>
    <string name="playlist_insert_track_cancel_message">Трек уже добавлен в плейлист </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="created_playlists_share">Поделиться</string>
    <string name="created_playlists_edit_info">Редактировать информацию</string>
    <string name="created_playlists_delete_playlist">Удалить плейлист</string>
    <string name="created_playlists_delete_question_title">Удалить плейлист</string>

    <string name="created_playlist_duration_text">минут</string>
    <string name="created_playlist_size_text">треков</string>
    <string name="created_playlist_question_title">Удалить трек</string>
    <string name="created_playlist_question_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="created_playlist_question_cancel">Отмена</string>
    <string name="created_playlist_question_delete">Удалить</string>
    <string name="created_playlist_share_empty">В этом плейлисте нет списка треков, которыми можно поделиться</string>
    <string name="created_playlist_empty">В плейлисте нет треков</string>
    <string name="created_playlist_delete_question_message">Хотите удалить плейлист «%s»?</string>
    <string name="created_playlist_delete_question_title">Удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="empty_description">2022</string>


    <plurals name="tracks_plurals">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_plurals">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

</resources>