<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:background="?attr/background_color"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting_text"
       />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/darkThemeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="left|center_vertical"
        android:textAllCaps="false"
        android:textSize="@dimen/settings_button_text_size"
        android:layout_marginStart="16dp"
        android:letterSpacing="0.01"
        android:fontFamily="@font/ys_display_regular"
        app:iconGravity="end"
        app:iconTint="@color/grey"
        android:layout_marginTop="24dp"
        android:text="@string/dark_theme_text"

        />

    <Button
        android:id="@+id/share_button"
        style="@style/SettingsButton"
        android:text="@string/share_app_text"
        app:icon="@drawable/ic_share" />

    <Button
        android:id="@+id/tech_support_button"
        style="@style/SettingsButton"
        android:text="@string/call_tech_support_text"
        app:icon="@drawable/ic_support" />

    <Button
        android:id="@+id/user_agreement_button"
        style="@style/SettingsButton"
        android:text="@string/user_agreement_text"
        app:icon="@drawable/ic_arrow_forward" />


</LinearLayout>