<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/player_back"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="?attr/colorOnSecondary"
        app:logo="@drawable/ic_arrow_back"

        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>
    <ImageView
        android:id="@+id/player_album_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cornerRadius="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintDimensionRatio="1.3:1"
        app:layout_constraintStart_toEndOf="@id/left_guideLine"
        app:layout_constraintEnd_toStartOf="@id/right_guideLine"
        app:layout_constraintTop_toBottomOf="@id/player_back"
        android:src="@mipmap/album_cover_foreground"/>
    <TextView
        android:id="@+id/player_track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="12dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/player_album_cover"
       app:layout_constraintStart_toStartOf="@id/player_album_cover"
        android:text="@string/yesterday_remastered_2009"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondary"
        android:textSize="22sp"
        android:fontFamily="@font/ys_display_medium"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/player_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/player_track_name"
        app:layout_constraintStart_toStartOf="@id/player_track_name"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"
        android:text="The Beatles "/>

    <ImageView
        android:id="@+id/player_playlist_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_guideLine"
        app:layout_constraintTop_toTopOf="@id/player_play_button"
        app:layout_constraintBottom_toBottomOf="@id/player_play_button"
        app:fabCustomSize="51dp"

        android:src="@drawable/media_lib_add_to_playlist_button"
        app:borderWidth="0dp"
        app:elevation="0dp"/>
    <ImageView
        android:id="@+id/player_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/left_guideLine"
        app:layout_constraintTop_toBottomOf="@id/player_artist_name"
        app:layout_constraintEnd_toStartOf="@id/right_guideLine"
        app:fabCustomSize="80dp"
        android:src="@drawable/media_lib_player_button"
        android:layout_marginTop="25dp"
        app:backgroundTint="?attr/colorOnSecondary"
        app:backgroundTintMode="src_atop"
        app:borderWidth="0dp"
        app:elevation="0dp"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/player_like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine"
        app:layout_constraintTop_toTopOf="@id/player_play_button"
        app:layout_constraintBottom_toBottomOf="@id/player_play_button"
        android:src="@drawable/media_lib_like_shape_button"
        android:backgroundTint="@color/media_lib_grey_button"
        app:fabCustomSize="51dp"
        app:borderWidth="0dp"
        app:elevation="0dp"
        />
    <TextView
        android:id="@+id/player_timer"
        style="@style/player_text_data_info"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/player_play_button"
        android:text="@string/player_timer"
        app:layout_constraintStart_toStartOf="@id/left_guideLine"
        app:layout_constraintEnd_toStartOf="@id/right_guideLine"
        />
    <TextView
        android:id="@+id/player_track_duration"
        style="@style/player_text_info"
        app:layout_constraintTop_toBottomOf="@id/player_timer"
        app:layout_constraintStart_toStartOf="@id/player_playlist_add_button"
        android:text="@string/track_duration"/>
    <TextView
        android:id="@+id/player_track_album"
        style="@style/player_text_info"
        app:layout_constraintTop_toBottomOf="@id/player_track_duration"
        app:layout_constraintStart_toStartOf="@id/player_playlist_add_button"
        android:text="@string/track_album"/>
    <TextView
        android:id="@+id/player_track_year"
        style="@style/player_text_info"
        app:layout_constraintTop_toBottomOf="@id/player_track_album"
        app:layout_constraintStart_toStartOf="@id/player_playlist_add_button"
        android:text="@string/track_year"/>
    <TextView
        android:id="@+id/player_track_genre"
        style="@style/player_text_info"
        app:layout_constraintTop_toBottomOf="@id/player_track_year"
        app:layout_constraintStart_toStartOf="@id/player_playlist_add_button"
        android:text="@string/track_genre"/>
    <TextView
        android:id="@+id/player_track_country"
        style="@style/player_text_info"
        android:paddingBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/player_track_genre"
        app:layout_constraintStart_toStartOf="@id/player_playlist_add_button"
        android:text="@string/track_country"/>

    <TextView
        android:id="@+id/player_track_country_data"
        style="@style/player_text_data_info"
        android:paddingBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/player_track_genre"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine"
        android:text="@string/track_country_data"/>

    <TextView
        android:id="@+id/player_track_genre_data"
        style="@style/player_text_data_info"
        app:layout_constraintTop_toBottomOf="@id/player_track_year"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine"
        android:text="@string/rock"/>
    <TextView
        android:id="@+id/player_track_year_data"
        style="@style/player_text_data_info"
        app:layout_constraintTop_toBottomOf="@id/player_track_album"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine"
        android:text="@string/track_year_data"/>
    <TextView
        android:id="@+id/player_track_album_data"
        style="@style/player_text_data_info"
        app:layout_constraintTop_toBottomOf="@id/player_track_duration"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine"
        android:text="@string/track_name_data"/>

    <TextView
        android:id="@+id/player_track_duration_data"
        style="@style/player_text_data_info"
        app:layout_constraintTop_toBottomOf="@id/player_timer"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine"
        android:text="@string/track_time_data"/>
</androidx.constraintlayout.widget.ConstraintLayout>

